--- a/src/global.scss
+++ b/src/global.scss
@@ -3,3 +3,12 @@
   padding: 0;
   margin: 0;
 }
+
+body,
+input,
+textarea,
+button {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+}
